# django-customers-app

./: .gitignore  LICENSE.md  README.md  manage.py  pyproject.toml
awn_prj/: asgi.py  settings.py  urls.py  wsgi.py
customers/: forms.py  models.py  tests.py  urls.py  views.py
customers/migrations/: 0001_initial.py  0002_alter_customermodel_address_alter_customermodel_city_and_more.py
customers/templates/customers/: add-customer.html  base.html  index.html
