[tool.poetry]
name = "awn-prj"
version = "0.1.0"
description = "Automotive Warranty Network project"
authors = ["Marcus Hightower <marcus.hightower@gmail.com>"]
license = "none"
readme = "README.md"
packages = [{include = "awn_prj"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
